gobmkida/c1/autohelperowl_defendpat293
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat293/src/patterns/owl_defendpat.c:4508:27: error: use of undeclared identifier 'invalid_operation'
if ( !( ( v9 + v10 < 0) ^ __OFADD__( v9, v10) | ( v9 + v10 == 0)) ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat293/src/patterns/owl_defendpat.c:4296:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/autohelperowl_defendpat293/src/obj/3/owl_defendpat.o] Error 1
